--- a/app/src/main/res/layout-normal/activity_detail_menu.xml
+++ b/app/src/main/res/layout-normal/activity_detail_menu.xml
@@ -310,6 +310,7 @@
                     </RelativeLayout>
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/linear_text_jumlah"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
@@ -340,72 +341,73 @@
                         android:layout_marginTop="2dp"
                         android:src="@drawable/ic_plus"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="15dp"
+                            android:orientation="horizontal"
+                            android:id="@+id/text">
+                            <TextView
+                                android:id="@+id/tv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/medium"
+                                android:text="Total Harga"
+                                android:textColor="@android:color/black"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/bayar"
+                            android:layout_width="150dp"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginStart="15dp"
+                            android:layout_below="@id/text">
+                            <TextView
+                                android:id="@+id/rp4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/medium"
+                                android:text="Rp."
+                                android:textSize="19sp"
+                                android:textStyle="bold"
+                                android:textColor="@android:color/black"/>
+                            <TextView
+                                android:id="@+id/total_price"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="15000"
+                                android:textColor="@android:color/black"
+                                android:textSize="19sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="right"
+                            android:layout_marginEnd="15dp"
+                            android:layout_toEndOf="@+id/bayar">
+                            <Button
+                                android:id="@+id/btn_chart"
+                                android:layout_width="200dp"
+                                android:layout_height="50dp"
+                                android:background="@drawable/btn_orange"
+                                android:text="Masuk Keranjang"
+                                android:textAllCaps="false"
+                                android:textColor="@color/White"
+                                android:textSize="18sp"/>
+                        </LinearLayout>
+                    </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="70dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:orientation="horizontal"
-                android:id="@+id/text">
-                <TextView
-                    android:id="@+id/tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/medium"
-                    android:text="Total Harga"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/bayar"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginStart="15dp"
-                android:layout_below="@id/text">
-                <TextView
-                    android:id="@+id/rp4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/medium"
-                    android:text="Rp."
-                    android:textSize="19sp"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/black"/>
-                <TextView
-                    android:id="@+id/total_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="15000"
-                    android:textColor="@android:color/black"
-                    android:textSize="19sp"
-                    android:textStyle="bold"/>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:layout_marginEnd="15dp"
-                android:layout_toEndOf="@+id/bayar">
-                <Button
-                    android:id="@+id/btn_chart"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/btn_orange"
-                    android:text="Masuk Keranjang"
-                    android:textAllCaps="false"
-                    android:textColor="@color/White"
-                    android:textSize="18sp"/>
-            </LinearLayout>
-        </RelativeLayout>
-    </LinearLayout>
 </RelativeLayout>
