--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -167,13 +167,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        <ImageView
-            android:id="@+id/image_detail_menu"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginTop="7dp"
-            android:src="@drawable/loading"
-            android:cropToPadding="true"/>
+            <ImageView
+                android:id="@+id/image_detail_menu"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginTop="7dp"
+                android:src="@drawable/loading"
+                android:cropToPadding="true"/>
             <TextView
                 android:id="@+id/nama_katering"
                 android:layout_width="wrap_content"
@@ -235,28 +235,28 @@
                         android:text=""
                         android:textColor="@android:color/black"
                         android:textSize="14sp"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
-                    android:orientation="vertical">
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Keterangan : "
-                        android:textSize="16dp"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@android:color/black" />
-                    <TextView
-                        android:id="@+id/text_keterangan_menu"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginBottom="5dp"
-                        android:text="Isi Keterangan" />
-                </LinearLayout>
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Keterangan : "
+                            android:textSize="16dp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="@android:color/black" />
+                        <TextView
+                            android:id="@+id/text_keterangan_menu"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="Isi Keterangan" />
+                    </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <LinearLayout
@@ -310,6 +310,7 @@
                     </RelativeLayout>
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/linear_text_jumlah"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
@@ -341,7 +342,7 @@
                         android:src="@drawable/ic_plus"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="50dp"
                     android:layout_width="match_parent"
                     android:layout_height="70dp">
                     <RelativeLayout
