--- a/adminpanels/src/main/res/layout/cardpembayaran_item.xml
+++ b/adminpanels/src/main/res/layout/cardpembayaran_item.xml
@@ -15,14 +15,30 @@
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/textID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="ID"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/btn_selesai"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:text="Selesai"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_alignParentEnd="true"
+                    android:textColor="@android:color/black"
+                    android:background="@drawable/bg_btn_save"/>
+            </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
