--- a/adminpanels/src/main/res/layout/cardriwayat_pesanan_item.xml
+++ b/adminpanels/src/main/res/layout/cardriwayat_pesanan_item.xml
@@ -8,6 +8,9 @@
     android:layout_marginEnd="10dp"
     android:layout_marginTop="10dp"
     app:cardElevation="8dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,6 +31,7 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"/>
             <Button
+                android:id="@+id/btn_update_riwayatpesanan"
                 android:layout_width="60dp"
                 android:layout_height="30dp"
                 android:text="Update"
@@ -132,5 +136,14 @@
                 android:textColor="@android:color/black"/>
         </LinearLayout>
     </LinearLayout>
-
+        <ProgressBar
+            android:id="@+id/progressBar_riwayat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
