--- a/app/src/main/res/layout-normal/fragment_home.xml
+++ b/app/src/main/res/layout-normal/fragment_home.xml
@@ -497,7 +497,6 @@
                     android:layout_below="@id/tv_promo"
                     >
                     <LinearLayout
-
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
@@ -506,29 +505,30 @@
                         tools:ignore="UselessLeaf">
 
                         <ImageView
-                            android:layout_width="150dp"
+                            android:layout_width="110dp"
                             android:layout_height="65dp"
-                            android:layout_marginEnd="5dp"
                             android:src="@drawable/sushi"
                             android:contentDescription="@string/todo" />
                         <ImageView
-                            android:layout_width="150dp"
+                            android:layout_width="110dp"
                             android:layout_height="65dp"
-                            android:layout_marginEnd="5dp"
                             android:src="@drawable/bento"
                             android:contentDescription="@string/todo"/>
                         <ImageView
-                            android:layout_width="150dp"
+                            android:layout_width="110dp"
                             android:layout_height="65dp"
-                            android:layout_marginEnd="5dp"
                             android:src="@drawable/japanese"
                             android:contentDescription="@string/todo"/>
 
                         <ImageView
-                            android:layout_width="150dp"
+                            android:layout_width="110dp"
                             android:layout_height="65dp"
-                            android:layout_marginEnd="5dp"
                             android:src="@drawable/sushi"
+                            android:contentDescription="@string/todo"/>
+                        <ImageView
+                            android:layout_width="110dp"
+                            android:layout_height="65dp"
+                            android:src="@drawable/bento"
                             android:contentDescription="@string/todo"/>
                     </LinearLayout>
                 </HorizontalScrollView>
