--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -33,11 +33,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_list_pembayaran"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="7dp"
         app:layout_constraintTop_toBottomOf="@+id/view1"
         tools:listitem="@layout/item_row_payment" />
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/introPay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
