--- a/app/src/main/res/layout/item_row_payment.xml
+++ b/app/src/main/res/layout/item_row_payment.xml
@@ -26,6 +26,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="ID"
+                    android:background="@color/Pink"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
@@ -65,7 +66,7 @@
                     android:textAllCaps="true"/>
             </LinearLayout>
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal">
@@ -76,7 +77,7 @@
                     android:textSize="16sp"/>
                 <TextView
                     android:id="@+id/tv_phone"
-                    android:layout_width="match_parent"
+                    android:layout_width="240dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="100dp"
                     android:layout_marginStart="101dp"
